--- a/index.html
+++ b/index.html
@@ -584,22 +584,22 @@
                         </div>
                         <marquee direction="up">
                             <ul class="latest-news-ul">
-                                <li> 31 mar 2022 Ph D merit list Part 01_16 feb 2022 <img
+                                <li>  EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Jagatsinghpur <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 31 mar 2022 Ph D merit list Part 02_16 feb 2022 <img
+                                <li> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality <img
                                         src="./assets/img/latest-news-blink-img.gif"> </li>
-                                <li> 24 May 2022 Incubation Center <img src="./assets/img/latest-news-blink-img.gif">
+                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img src="./assets/img/latest-news-blink-img.gif">
                                 </li>
-                                <li> 31 mar 2022 Instituitional Distinctiveness <img
+                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img
                                         src="./assets/img/latest-news-blink-img.gif">
                                 </li>
-                                <li> 31 mar 2022 Academic Calender Session 2019-20 <img
+                                <li> 31 mar 2022  Session 2019-20 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 16 feb 2022 Ph D merit list Part 01_16 feb 2022 <img
+                                <li> 16 feb 2022  list Part 01_16 feb 2022 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 16 feb 2022 Ph D merit list Part 02_16 feb 2022 <img
+                                <li> 16 feb 2022  list Part 02_16 feb 2022 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 17 Oct 2022 Consolidate academic Calender <img
+                                <li> "Quotation for displaying of Advertisement within Jagatsinghpur Municipality Area" <img
                                         src="./assets/img/latest-news-blink-img.gif">
                                 </li>
                             </ul>
@@ -614,15 +614,13 @@
                         </div>
                         <ul class="upcoming-event-list">
                             <li><span class="event-date">29 <br>
-                                    April</span><span> Seminar is conducted on BCA courses.</span> </li>
+                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
                             <li><span class="event-date">30 <br>
-                                    April</span><span> Seminar is conducted on B.com courses.</span> </li>
+                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
                             <li><span class="event-date">2 <br>
-                                    Mar</span><span> Conducted its 2nd convocation ceremony.</span> </li>
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
                             <li><span class="event-date">5 <br>
-                                    Mar</span><span> Annual Meeting for Batch of BBA ( 2018 to 2021 ) and seminar will
-                                    be
-                                    conducted for future growth and oppurtunity.</span> </li>
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
                         </ul>
                     </div>
                 </div>
