--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <a href="#">Raghunathpur </a>
             </div>
             <div class="header-right">
+                <div class="social-media-icon">
+                    <a href="#"><i class="ri-instagram-line"></i></a>
+                    <a href="#"><i class="ri-facebook-circle-line"></i></a>
+                    <a href="#"><i class="ri-twitter-line"></i></a>
+
+                </div>
                 <div class="search-box">
                     <input type="text" name="" id="" placeholder="Search...">
                     <a href="#"><i class="fas fa-search"></i></a>
@@ -584,23 +590,23 @@
                         </div>
                         <marquee direction="up">
                             <ul class="latest-news-ul">
-                                <li>  EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Jagatsinghpur <img
-                                        src="./assets/img/latest-news-blink-img.gif"></li>
+                                <li> EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Jagatsinghpur
+                                    <img src="./assets/img/latest-news-blink-img.gif"></li>
                                 <li> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality <img
                                         src="./assets/img/latest-news-blink-img.gif"> </li>
-                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img src="./assets/img/latest-news-blink-img.gif">
+                                <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img
+                                        src="./assets/img/latest-news-blink-img.gif">
                                 </li>
                                 <li> Tender for hiring of vehicle for official use of DLSA Jagatsinghpur <img
                                         src="./assets/img/latest-news-blink-img.gif">
                                 </li>
-                                <li> 31 mar 2022  Session 2019-20 <img
+                                <li> 31 mar 2022 Session 2019-20 <img src="./assets/img/latest-news-blink-img.gif"></li>
+                                <li> 16 feb 2022 list Part 01_16 feb 2022 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 16 feb 2022  list Part 01_16 feb 2022 <img
+                                <li> 16 feb 2022 list Part 02_16 feb 2022 <img
                                         src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> 16 feb 2022  list Part 02_16 feb 2022 <img
-                                        src="./assets/img/latest-news-blink-img.gif"></li>
-                                <li> "Quotation for displaying of Advertisement within Jagatsinghpur Municipality Area" <img
-                                        src="./assets/img/latest-news-blink-img.gif">
+                                <li> "Quotation for displaying of Advertisement within Jagatsinghpur Municipality Area"
+                                    <img src="./assets/img/latest-news-blink-img.gif">
                                 </li>
                             </ul>
                         </marquee>
@@ -614,13 +620,17 @@
                         </div>
                         <ul class="upcoming-event-list">
                             <li><span class="event-date">29 <br>
-                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
+                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Municipality</span> </li>
                             <li><span class="event-date">30 <br>
-                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
+                                    April</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Municipality</span> </li>
                             <li><span class="event-date">2 <br>
-                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Municipality</span> </li>
                             <li><span class="event-date">5 <br>
-                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur Municipality</span> </li>
+                                    Mar</span><span> Tender for hiring of vehicle for official use in Jagatsinghpur
+                                    Municipality</span> </li>
                         </ul>
                     </div>
                 </div>
@@ -776,12 +786,17 @@
                             <h3 class="head-title"> Useful Information</h3>
                         </div>
                         <ul class="useful-info-ul">
-                            <li><img src="./assets/img/subhadra.png"> <a href="https://subhadra.odisha.gov.in/" target="_blank">Subhadra</a></li>
-                            <li><img src="./assets/img/omail.png"> <a href="https://mail.odisha.gov.in/webmail/" target="_blank">OMail</a></li>
-                            <li><img src="./assets/img/odishaone.png"> <a href="https://www.odishaone.gov.in/citizen/" target="_blank">Odisha One</a></li>
-                            <li><img src="./assets/img/janasunani.png"> <a href="https://janasunani.odisha.gov.in/" target="_blank">Janasunani</a></li>
+                            <li><img src="./assets/img/subhadra.png"> <a href="https://subhadra.odisha.gov.in/"
+                                    target="_blank">Subhadra</a></li>
+                            <li><img src="./assets/img/omail.png"> <a href="https://mail.odisha.gov.in/webmail/"
+                                    target="_blank">OMail</a></li>
+                            <li><img src="./assets/img/odishaone.png"> <a href="https://www.odishaone.gov.in/citizen/"
+                                    target="_blank">Odisha One</a></li>
+                            <li><img src="./assets/img/janasunani.png"> <a href="https://janasunani.odisha.gov.in/"
+                                    target="_blank">Janasunani</a></li>
                             <!-- <li><img src="./assets/img/edespatch.png"> <a href="#">eDespatch</a></li> -->
-                            <li><img src="./assets/img/epravesh.png"> <a href="https://epravesh.odisha.gov.in/" target="_blank">ePravesh</a></li>
+                            <li><img src="./assets/img/epravesh.png"> <a href="https://epravesh.odisha.gov.in/"
+                                    target="_blank">ePravesh</a></li>
                             <li><img src="./assets/img/tenders.png"> <a href="#">Tender & Advt.</a></li>
                         </ul>
                     </div>
@@ -851,7 +866,11 @@
                             <h3 class="head-title"> Social Media</h3>
                         </div>
                         <div class="social-media">
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FJagatsinghpurDist%3Fref%3Dembed_page&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                            <iframe
+                                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FJagatsinghpurDist%3Fref%3Dembed_page&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                width="340" height="500" style="border:none;overflow:hidden" scrolling="no"
+                                frameborder="0" allowfullscreen="true"
+                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                         </div>
 
                     </div>
