--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </div>
             <div class="nav__data">
                 <a href="#" class="nav__logo">
-                    <img src="./assets/img/cm-1.png" alt="">
+                    <img class="cm-img" src="./assets/img/cm-1.png" alt="">
                 </a>
 
             </div>
@@ -588,7 +588,7 @@
                         <div class="heading-sect">
                             <h3 class="head-title">Latest New</h3>
                         </div>
-                        <marquee direction="up">
+                        <marquee direction="up" class="scrill-notice">
                             <ul class="latest-news-ul">
                                 <li> EOI for Krushi Ratha programme in Kharif / Rabi 2024-25 under CDAO Jagatsinghpur
                                     <img src="./assets/img/latest-news-blink-img.gif"></li>
