--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="About.html" class="dropdown__link">
+                                <a href="history.html" class="dropdown__link">
                                     History
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="who's-who.html" class="dropdown__link">
                                     Who's Who
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="map_of_block.html" class="dropdown__link">
                                     Map Of Block
                                 </a>
                             </li>
@@ -95,47 +95,47 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="block.html" class="dropdown__sublink">
                                             Block
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
-                                            Tahasil
+                                        <a href="gp.html" class="dropdown__sublink">
+                                            Gram Panchayat
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="police.html" class="dropdown__sublink">
                                             Police
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="revenue_villages.html" class="dropdown__sublink">
                                             Revenue Villages
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="court.html" class="dropdown__sublink">
                                             Court
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="constituencies.html" class="dropdown__sublink">
                                             Constituencies
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="demographic.html" class="dropdown__link">
                                     Demography
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown__item">
+                    <!-- <li class="dropdown__item">
                         <div class="nav__link">
                             Departments <i class="ri-arrow-down-s-line dropdown__arrow"></i>
                         </div>
@@ -164,7 +164,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="dropdown__item">
                         <div class="nav__link">
                             Directory <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -172,23 +172,23 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="government_contact.html" class="dropdown__link">
                                     Government Contact
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="press&media.html" class="dropdown__link">
                                     Press & Media
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="std&pin.html" class="dropdown__link">
                                     STD & PIN Codes
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="helpline.html" class="dropdown__link">
                                     Helpline
                                 </a>
                             </li>
@@ -421,6 +421,9 @@
                         <div class="item">
                             <img src="./assets/img/slider-5.jpg" alt="">
                         </div>
+                        <!-- <div class="item">
+                            <img src="./assets/img/slider-6.jpg" alt="">
+                        </div> -->
                     </div>
                     <div class="buttons">
                         <button id="prev">
