--- a/history.html
+++ b/history.html
@@ -427,7 +427,7 @@
                             <li class="content-list-li"><a href="">Map of Block</a> </li>
                             <li class="content-list-li click-expand">Administrative Setup<i class="ri-arrow-down-s-line dropdown__arrow"></i>
                                 <ul>
-                                    <li class="content-list-li">Block</li>
+                                    <li class="content-list-li"><a href="block.html">Block</a></li>
                                     <li class="content-list-li">Tahasil</li>
                                     <li class="content-list-li">Police</li>
                                     <li class="content-list-li">Police</li>
