--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <div class="header-right">
                 <div class="social-media-icon">
+                    <a href="./login/index.html"><i class="ri-login-circle-line">login</i></a>
                     <a href="#"><i class="ri-instagram-line"></i></a>
                     <a href="#"><i class="ri-facebook-circle-line"></i></a>
                     <a href="#"><i class="ri-twitter-line"></i></a>
@@ -201,34 +202,34 @@
 
                                 <ul class="dropdown__submenu">
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="bank.html" class="dropdown__sublink">
                                             Bank
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="college.html" class="dropdown__sublink">
                                             Colleges
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="school.html" class="dropdown__sublink">
                                             School
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="hospital.html" class="dropdown__sublink">
                                             Hospitals
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="ngo.html" class="dropdown__sublink">
                                             NGOs
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" class="dropdown__sublink">
+                                        <a href="electricity.html" class="dropdown__sublink">
                                             Electricity
                                         </a>
                                     </li>
@@ -244,29 +245,29 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="block_env_plan.html" class="dropdown__link">
                                     Block Environment Plan
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="news.html" class="dropdown__link">
                                     News
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rbsk_microplan.html" class="dropdown__link">
                                     RBSK Microplan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="emergency_plan.html" class="dropdown__link">
                                     Emergency Plan
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="annual_reports.html" class="dropdown__link">
                                     Annul Reports
                                 </a>
                             </li>
@@ -279,29 +280,29 @@
 
                         <ul class="dropdown__menu">
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="notice.html" class="dropdown__link">
                                     Notice
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="tender.html" class="dropdown__link">
                                     Tenders
                                 </a>
                             </li>
 
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="form.html" class="dropdown__link">
                                     Form
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="rti.html" class="dropdown__link">
                                     RTI
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="dropdown__link">
+                                <a href="media_gallery.html" class="dropdown__link">
                                     Media Gallery
                                 </a>
                             </li>
@@ -444,13 +445,13 @@
                 <div class="officer-part">
                     <div class="officer-section">
                         <div class="officer-img">
-                            <img src="./assets/img/images.png" alt="">
+                            <img src="./assets/img/rabi-narayan-naik_0.jpg" alt="">
                         </div>
                         <div class="officer-name">
-                            Shri J Sonal, IAS
+                            Shri Rabi Narayan Naik
                         </div>
                         <div class="officer-designation">
-                            Collector & District Magistrate
+                            Hon'ble Cabinet Minister
                         </div>
                     </div>
                     <div class="officer-section">
