--- a/adminhub-master/index.html
+++ b/adminhub-master/index.html
@@ -24,7 +24,7 @@
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
-				<a href="#">
+				<a href="index.html">
 					<i class='bx bxs-dashboard'></i>
 					<span class="text">Dashboard</span>
 				</a>
@@ -32,7 +32,7 @@
 			<li>
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Update Achievement</span>
 				</a>
 			</li>
 			<li>
@@ -43,7 +43,7 @@
 			</li>
 			<li>
 				<a href="message.html">
-					<i class='bx bxs-message-dots'></i>
+					<i class='bx bx-task'></i>
 					<span class="text">Task Status</span>
 				</a>
 			</li>
