--- a/adminhub-master/view-data.html
+++ b/adminhub-master/view-data.html
@@ -32,7 +32,7 @@
 			<li class="active">
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Update Achievement</span>
 				</a>
 			</li>
 			<li>
@@ -42,8 +42,8 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="message.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Status</span>
 				</a>
 			</li>
