--- a/constituencies.html
+++ b/constituencies.html
@@ -396,7 +396,7 @@
 
                 <ul class="quicklink-menu">
 
-                    <li>District Emerangency Helpline :-<a href="tel:+91 06724-220368">06724-220368</a></li>
+                    <li>District Emergency Helpline :-<a href="tel:+91 06724-220368">06724-220368</a></li>
                     <li> Child Helpline :- <a href="tel: 1098">1098</a></li>
                     <li> Women Helpline :-<a href="tel: 1091">1091</a></li>
                     <li> Crime Stopper :-<a href="tel: 1090">1090</a></li>
