--- a/state admin/index.html
+++ b/state admin/index.html
@@ -36,6 +36,12 @@
 				</a>
 			</li>
 			<li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li>
 				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency</span>
@@ -43,7 +49,7 @@
 			</li>
 			<li>
 				<a href="taskassignment.html">
-					<i class='bx bxs-message-dots'></i>
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
