--- a/state admin/taskassignment.html
+++ b/state admin/taskassignment.html
@@ -35,7 +35,13 @@
 					<span class="text">Set Target</span>
 				</a>
 			</li>
-			<li >
+			<li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li>
 				<a href="#">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency</span>
@@ -43,7 +49,7 @@
 			</li>
 			<li class="active">
 				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
@@ -182,13 +188,13 @@
 								<img src="img/pmay-logo.jpg" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="taskassign-1.html">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per html">
@@ -202,13 +208,13 @@
 								<img src="img/download.png" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="districtreport.html">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per css">
@@ -222,13 +228,13 @@
 								<img src="img/logo.png" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="districtreport.html">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per javascript">
@@ -242,13 +248,13 @@
 								<img src="img/pmay-logo.jpg" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="#view-data">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per nodejs">
@@ -262,13 +268,13 @@
 								<img src="img/download.png" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="#view-data">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per html">
@@ -282,13 +288,13 @@
 								<img src="img/logo.png" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
-		
+
 									<a href="#view-data">
 										<p>Add New Task</p>
 									</a>
 								</span>
 							</div>
-		
+
 							<!-- <div class="skill-box">
 								<div class="skill-bar">
 									<span class="skill-per css">
@@ -321,11 +327,11 @@
 						</li> -->
 					</ul>
 				</div>
-				
+
 
 			</div>
 
-			
+
 		</main>
 		<!-- MAIN -->
 	</section>
