--- a/state admin/create-scheme.html
+++ b/state admin/create-scheme.html
@@ -29,13 +29,13 @@
                     <span class="text">Dashboard</span>
                 </a>
             </li>
-            <li class="active">
+            <li >
                 <a href="upload-data.html">
                     <i class='bx bxs-shopping-bag-alt'></i>
                     <span class="text">Set Target</span>
                 </a>
             </li>
-            <li>
+            <li class="active">
                 <a href="create-scheme.html">
                     <i class='bx bx-file'></i>
                     <span class="text">Create Scheme</span>
@@ -120,7 +120,7 @@
                         </li>
                         <li><i class='bx bx-chevron-right'></i></li>
                         <li>
-                            <a class="active" href="#">Upload Achievement</a>
+                            <a class="active" href="#">Create Scheme</a>
                         </li>
                     </ul>
                 </div>
@@ -171,131 +171,55 @@
 
 
 
-            <ul class="box-info">
-                <li>
-                    <div class="content">
-                        <img src="img/pmay-logo.jpg" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
+            <div class="table-data" id="upload">
+                <div class="order">
+                    <div class="head">
+                        <h3>Create Scheme</h3>
+                        <!-- <a href="view-data.html">View Target</a> -->
+                        <!-- <i class='bx bx-filter'></i> -->
                     </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per html">
-                                <span class="tooltip">90%</span>
-                            </span>
+                    <form action="#" class="form">
+                        <!-- <div class="input-box">
+                          <label>Date</label>
+                          <input type="date" placeholder="Enter full name" required />
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/download.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
+                
+                        <div class="input-box">
+                          <label>Email Address</label>
+                          <input type="text" placeholder="Enter email address" required />
+                        </div> -->
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
+                        <div class="column">
 
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per css">
-                                <span class="tooltip">70%</span>
-                            </span>
+                            <div class="input-box">
+                                <label>Scheme Name</label>
+                                <input type="text" placeholder="Enter Scheme Name" required />
+                            </div>
+                            <div class="input-box">
+                                <label>Scheme Details</label>
+                                <input type="text" placeholder="Enter Scheme Details" required />
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/logo.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
+                        <div class="column">
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per javascript">
-                                <span class="tooltip">50%</span>
-                            </span>
+                            <div class="input-box">
+                                <label>Scheme Type</label>
+                                <input type="text" placeholder="Enter Scheme Type" required />
+                            </div>
+                            <div class="input-box">
+                                <label>Scheme Logo</label>
+                                <input type="file" placeholder="Enter Scheme Logo" required />
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/pmay-logo.jpg" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per nodejs">
-                                <span class="tooltip">30%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/download.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per html">
-                                <span class="tooltip">90%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/logo.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per css">
-                                <span class="tooltip">70%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+                        
 
 
+                        <button>Create</button>
+                    </form>
+                </div>
 
+            </div>
         </main>
         <!-- MAIN -->
     </section>
