--- a/state admin/effcience.html
+++ b/state admin/effcience.html
@@ -35,15 +35,21 @@
 					<span class="text">Set Target</span>
 				</a>
 			</li>
+			<li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
 			<li class="active">
-				<a href="#">
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Status</span>
 				</a>
 			</li>
@@ -68,7 +74,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
