--- a/state admin/upload-data-1.html
+++ b/state admin/upload-data-1.html
@@ -36,12 +36,6 @@
                 </a>
             </li>
             <li>
-                <a href="create-scheme.html">
-                    <i class='bx bx-file'></i>
-                    <span class="text">Create Scheme</span>
-                </a>
-            </li>
-            <li>
                 <a href="effcience.html">
                     <i class='bx bxs-doughnut-chart'></i>
                     <span class="text">Efficiency</span>
@@ -171,131 +165,76 @@
 
 
 
-            <ul class="box-info">
-                <li>
-                    <div class="content">
-                        <img src="img/pmay-logo.jpg" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
+            <div class="table-data" id="upload">
+                <div class="order">
+                    <div class="head">
+                        <h3>Scheme Name :- PMAY</h3>
+                        <a href="view-data.html">View Target</a>
+                        <!-- <i class='bx bx-filter'></i> -->
                     </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per html">
-                                <span class="tooltip">90%</span>
-                            </span>
+                    <form action="#" class="form">
+                        <!-- <div class="input-box">
+                          <label>Date</label>
+                          <input type="date" placeholder="Enter full name" required />
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/download.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
+                
+                        <div class="input-box">
+                          <label>Email Address</label>
+                          <input type="text" placeholder="Enter email address" required />
+                        </div> -->
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
+                        <div class="column">
 
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per css">
-                                <span class="tooltip">70%</span>
-                            </span>
+                            <div class="input-box">
+                                <label>Target</label>
+                                <input type="text" placeholder="Enter Target" required />
+                            </div>
+                            <div class="input-box">
+                                <label>Deadline Date</label>
+                                <input type="date" placeholder="Enter Deadline Date" required />
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/logo.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
+                        <div class="column">
+                            <div class="input-box">
+                                <label>Select District</label>
+                                <!-- <input type="text" placeholder="Achieved" required /> -->
+                                <select name="" id="" class="input-box">
+                                    <option value="">All</option>
+                                    <option value="">Jagatsinghpur</option>
+                                    <option value="">Khurdha</option>
+                                    <option value="">Cuttack</option>
+                                    <option value="">Puri</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
 
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per javascript">
-                                <span class="tooltip">50%</span>
-                            </span>
+                            </div>
+                            <div class="input-box">
+                                <label>Select Block</label>
+                                <!-- <input type="text" placeholder="Enter Funds allocated" required /> -->
+                                <select name="" id="" class="input-box">
+                                    <option value="">All</option>
+                                    <option value="">Raghunathpur</option>
+                                    <option value="">Jagarsinghpur</option>
+                                    <option value="">Balikuda</option>
+                                    <option value="">Biridi</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/pmay-logo.jpg" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per nodejs">
-                                <span class="tooltip">30%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/download.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per html">
-                                <span class="tooltip">90%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <img src="img/logo.png" alt="" class="bx">
-                        <!-- <i class='bx bxs-calendar-check' ></i> -->
-                        <span class="text">
-
-                            <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
-                            </a>
-                        </span>
-                    </div>
-
-                    <div class="skill-box">
-                        <div class="skill-bar">
-                            <span class="skill-per css">
-                                <span class="tooltip">70%</span>
-                            </span>
-                        </div>
-                    </div>
-                </li>
-            </ul>
 
 
+                        <button>Submit</button>
+                    </form>
+                </div>
 
+            </div>
         </main>
         <!-- MAIN -->
     </section>
