--- a/state admin/districtreport.html
+++ b/state admin/districtreport.html
@@ -29,22 +29,28 @@
 					<span class="text">Dashboard</span>
 				</a>
 			</li>
-			<li class="active">
+			<li >
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Set Target</span>
 				</a>
 			</li>
 			<li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li class="active">
 				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="taskassignment.html">
 					<i class='bx bxs-message-dots'></i>
-					<span class="text">Task Status</span>
+					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
@@ -114,7 +120,7 @@
 						</li>
 						<li><i class='bx bx-chevron-right'></i></li>
 						<li>
-							<a class="active" href="#">District Report</a>
+							<a class="active" href="#">Efficiency</a>
 						</li>
 					</ul>
 				</div>
