--- a/state admin/effcience.html
+++ b/state admin/effcience.html
@@ -20,7 +20,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-house'></i>
-			<span class="text">Raghunathpur Block</span>
+			<span class="text">Odisha Panchayati Raj and Drinking Water Department</span>
 		</a>
 		<ul class="side-menu top">
 			<li>
@@ -50,7 +50,7 @@
 			<li>
 				<a href="taskassignment.html">
 					<i class='bx bx-task'></i>
-					<span class="text">Task Status</span>
+					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
