--- a/state admin/view-data.html
+++ b/state admin/view-data.html
@@ -32,7 +32,7 @@
 			<li class="active">
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Set Target</span>
 				</a>
 			</li>
 			<li>
@@ -173,8 +173,9 @@
 						<i class='bx bxs-file-pdf'></i>
 						<i class='bx bx-search'></i>
 						<i class='bx bx-filter'></i>
+						<a href="upload-data.html"><h4>Set Target</h4></a>
 					</div>
-					<div class="order filetr-section">
+					<!-- <div class="order filetr-section">
 						<div class="state-filter">
 							<div class="select-option">
 								<select name="" id="">
@@ -203,7 +204,7 @@
 								</select>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<table class="table">
 						<thead>
 							<tr>
@@ -212,7 +213,7 @@
 								<th>Block </th>
 								<th>Target Value</th>
 								<th>Deadline Date</th>
-								<th>Status</th>
+								<th>Action</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -222,7 +223,9 @@
 								<td>Raghunathpur</td>
 								<td>2000</td>
 								<td>01-11-2024</td>
-								<td>Done</td>
+								<td><i class='bx bx-edit'></i>
+									<i class='bx bx-file-find' ></i>
+								</td>
 							</tr>
 							<tr>
 								<td>01-10-2024</td>
@@ -230,7 +233,8 @@
 								<td>Raghunathpur</td>
 								<td>2000</td>
 								<td>01-11-2024</td>
-								<td>Not Done</td>
+								<td><i class='bx bx-edit'></i>
+									<i class='bx bx-file-find' ></i></td>
 							</tr>
 						</tbody>
 					</table>
