--- a/state admin/view-task.html
+++ b/state admin/view-task.html
@@ -20,7 +20,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-house'></i>
-			<span class="text">Raghunathpur Block</span>
+			<span class="text">Odisha Panchayati Raj and Drinking Water Department</span>
 		</a>
 		<ul class="side-menu top">
 			<li>
@@ -32,7 +32,13 @@
 			<li >
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Set Target</span>
+				</a>
+			</li>
+			<li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
 				</a>
 			</li>
 			<li>
