--- a/adminhub-master/message.html
+++ b/adminhub-master/message.html
@@ -173,7 +173,7 @@
                         <a href="view-task-block.html"><h4>Block task Status</h4></a>
 					</div>
                     <ul class="box-info task-content-data">
-                        <li>
+                        <li style="background: rgb(0, 255, 128);">
                             <div class="content task-content-status">
                                 <a href="completed.html" target="_blank">
                                     <h3>02</h3>
@@ -184,7 +184,7 @@
                             </div>
                             
                         </li>
-                        <li>
+                        <li style="background: rgb(255, 174, 0);">
                             <div class="content task-content-status">
                                 <a href="https://pmaymis.gov.in/" target="_blank">
                                     <h3>02</h3>
@@ -195,7 +195,7 @@
                             </div>
                             
                         </li>
-                        <li>
+                        <li style="background: rgb(255, 42, 0);">
                             <div class="content task-content-status">
                                 <a href="https://pmaymis.gov.in/" target="_blank">
                                     <h3 >01</h3>
