--- a/state admin/taskassign-1.html
+++ b/state admin/taskassign-1.html
@@ -20,7 +20,7 @@
     <section id="sidebar">
         <a href="#" class="brand">
             <i class='bx bxs-house'></i>
-            <span class="text">Raghunathpur Block</span>
+            <span class="text">Odisha Panchayati Raj and Drinking Water Department</span>
         </a>
         <ul class="side-menu top">
             <li>
@@ -29,10 +29,16 @@
                     <span class="text">Dashboard</span>
                 </a>
             </li>
-            <li >
+            <li>
                 <a href="upload-data.html">
                     <i class='bx bxs-shopping-bag-alt'></i>
                     <span class="text">Set Target</span>
+                </a>
+            </li>
+            <li>
+                <a href="create-scheme.html">
+                    <i class='bx bx-file'></i>
+                    <span class="text">Create Scheme</span>
                 </a>
             </li>
             <li>
@@ -165,7 +171,7 @@
 
 
 
-            
+
 
             <div class="table-data" id="upload">
                 <div class="order">
@@ -207,7 +213,7 @@
                                 <input type="date" placeholder="Enter Deadline Date" required />
                             </div>
                         </div>
-                        
+
 
 
                         <button>Submit</button>
