--- a/state admin/upload-data-1.html
+++ b/state admin/upload-data-1.html
@@ -114,7 +114,7 @@
                         </li>
                         <li><i class='bx bx-chevron-right'></i></li>
                         <li>
-                            <a class="active" href="#">Upload Achievement</a>
+                            <a class="active" href="#">Set Target</a>
                         </li>
                     </ul>
                 </div>
