--- a/state admin/upload-data.html
+++ b/state admin/upload-data.html
@@ -20,7 +20,7 @@
     <section id="sidebar">
         <a href="#" class="brand">
             <i class='bx bxs-house'></i>
-            <span class="text">Raghunathpur Block</span>
+            <span class="text">Odisha Panchayati Raj and Drinking Water Department</span>
         </a>
         <ul class="side-menu top">
             <li>
@@ -120,7 +120,7 @@
                         </li>
                         <li><i class='bx bx-chevron-right'></i></li>
                         <li>
-                            <a class="active" href="#">Upload Achievement</a>
+                            <a class="active" href="#">Set Target</a>
                         </li>
                     </ul>
                 </div>
@@ -179,7 +179,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
@@ -199,7 +199,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
@@ -219,7 +219,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
@@ -239,7 +239,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
@@ -259,7 +259,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
@@ -279,7 +279,7 @@
                         <span class="text">
 
                             <a href="upload-data-1.html">
-                                <p>Update Achievement</p>
+                                <p>Set Target</p>
                             </a>
                         </span>
                     </div>
