--- a/state admin/completed.html
+++ b/state admin/completed.html
@@ -186,7 +186,7 @@
                                 <th>Task Date</th>
                                 <th>Due Date </th>
                                 <th>Status</th>
-                                <th>Overdue bu Day</th>
+                                <th>Overdue by Day</th>
                                 <!-- <th>Action</th> -->
 
                             </tr>
