--- a/state admin/deadline-crossed.html
+++ b/state admin/deadline-crossed.html
@@ -191,7 +191,7 @@
                                 <th>Task Date</th>
                                 <th>Due Date </th>
                                 <th>Status</th>
-                                <th>Deadline Crossed bu Day</th>
+                                <th>Deadline Crossed by Day</th>
                                 <!-- <th>Action</th> -->
 
                             </tr>
