--- a/state admin/blockreport.html
+++ b/state admin/blockreport.html
@@ -20,7 +20,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-house'></i>
-			<span class="text">Raghunathpur Block</span>
+			<span class="text">Panchayati Raj and Drinking Water Department Government of Odisha</span>
 		</a>
 		<ul class="side-menu top">
 			<li >
