--- a/state admin/index.html
+++ b/state admin/index.html
@@ -20,7 +20,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-house'></i>
-			<span class="text">Odisha Panchayati Raj and Drinking Water Department </span>
+			<span class="text">Panchayati Raj and Drinking Water Department Government of Odisha</span>
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
@@ -54,7 +54,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
