--- a/state admin/message-box.html
+++ b/state admin/message-box.html
@@ -20,7 +20,7 @@
     <section id="sidebar">
         <a href="#" class="brand">
             <i class='bx bxs-house'></i>
-            <span class="text">Raghunathpur Block</span>
+            <span class="text">Panchayati Raj and Drinking Water Department Government of Odisha</span>
         </a>
         <ul class="side-menu top">
             <li>
@@ -35,7 +35,7 @@
                     <span class="text">Set Target</span>
                 </a>
             </li>
-            <li class="active">
+            <li >
                 <a href="create-scheme.html">
                     <i class='bx bx-file'></i>
                     <span class="text">Create Scheme</span>
@@ -53,8 +53,8 @@
                     <span class="text">Task Assignment</span>
                 </a>
             </li>
-            <li>
-                <a href="#">
+            <li class="active">
+                <a href="message-box.html">
                     <i class='bx bxs-message-dots'></i>
                     <span class="text">Message</span>
                 </a>
@@ -120,7 +120,7 @@
                         </li>
                         <li><i class='bx bx-chevron-right'></i></li>
                         <li>
-                            <a class="active" href="#">Create Scheme</a>
+                            <a class="active" href="#">Message</a>
                         </li>
                     </ul>
                 </div>
@@ -175,7 +175,7 @@
             <div class="table-data" id="upload">
                 <div class="order">
                     <div class="head">
-                        <h3>Create Scheme</h3>
+                        <h3>Message</h3>
                         <!-- <a href="view-data.html">View Target</a> -->
                         <!-- <i class='bx bx-filter'></i> -->
                     </div>
@@ -193,29 +193,29 @@
                         <div class="column">
 
                             <div class="input-box">
-                                <label>Scheme Name</label>
-                                <input type="text" placeholder="Enter Scheme Name" required />
+                                <label>District</label>
+                                <input type="text" placeholder="Enter District" required />
                             </div>
                             <div class="input-box">
-                                <label>Scheme Website</label>
-                                <input type="text" placeholder="Enter Scheme Website URL" required />
+                                <label>Block</label>
+                                <input type="text" placeholder="Enter Block" required />
                             </div>
                         </div>
                         <div class="column">
 
                             <div class="input-box">
-                                <label>Scheme Type</label>
-                                <input type="text" placeholder="Enter Scheme Type" required />
+                                <label>Message</label>
+                                <input type="text" placeholder="Enter Message" required />
                             </div>
-                            <div class="input-box">
+                            <!-- <div class="input-box">
                                 <label>Scheme Logo</label>
                                 <input type="file" placeholder="Enter Scheme Logo" required />
-                            </div>
+                            </div> -->
                         </div>
                         
 
 
-                        <button>Create</button>
+                        <button>Send</button>
                     </form>
                 </div>
 
