--- a/adminhub-master/index.html
+++ b/adminhub-master/index.html
@@ -48,7 +48,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
