--- a/state admin/upload-data.html
+++ b/state admin/upload-data.html
@@ -20,7 +20,7 @@
     <section id="sidebar">
         <a href="#" class="brand">
             <i class='bx bxs-house'></i>
-            <span class="text">Odisha Panchayati Raj and Drinking Water Department</span>
+            <span class="text">Panchayati Raj and Drinking Water Department Government of Odisha</span>
         </a>
         <ul class="side-menu top">
             <li>
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="message-box.html">
                     <i class='bx bxs-message-dots'></i>
                     <span class="text">Message</span>
                 </a>
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="logout">
+                <a href="../index.html" class="logout">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Logout</span>
                 </a>
