login page img update

--- a/login/index.html
+++ b/login/index.html
@@ -16,14 +16,14 @@
       <div class="front">
         <img src="images/frontImg.jpg" alt="">
         <div class="text">
-          <!-- <span class="text-1">Government of Odisha </span> -->
+          <span class="text-1">Government of Odisha </span>
           <!-- <span class="text-2">Let's get connected</span> -->
         </div>
       </div>
       <div class="back">
         <img class="backImg" src="images/backImg.jpg" alt="">
         <div class="text">
-          <!-- <span class="text-1">Government of Odisha</span> -->
+          <span class="text-1">Government of Odisha</span>
           <!-- <span class="text-2">Let's get started</span> -->
         </div>
       </div>
